Fixed deprecated code in the MinecraftDashboard.java